distribution/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: todo-app

spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 9100
      targetPort: 9100
  type: ClusterIP
