distribution/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: todo-app

spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5433
      targetPort: 5432
  type: ClusterIP
