distribution/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todo-app

spec:
  ingressClassName: nginx
  rules:
    - host: todo.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 9100
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
